# mcprotocol-rs

./: Cargo.toml  LICENSE  README.md
examples/: lifecycle_client.rs  lifecycle_server.rs  ping_example.rs  stdio_client.rs  stdio_server.rs
src/: error.rs  lib.rs
src/client/: sampling.rs
src/client_features/: mod.rs  roots.rs
src/protocol/: message.rs  mod.rs
src/server/: mod.rs  prompts.rs  resources.rs
src/server_features/: tools.rs
src/transport/: http.rs  mod.rs  stdio.rs
src/transport/http/: client.rs  mod.rs  server.rs
src/transport/stdio/: client.rs  mod.rs  server.rs
