[package]
name = "mcprotocol-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/Adiao1973/mcprotocol-rs"
authors = ["Adiao <mzhou7626@gmail.com>"]
keywords = ["mcp", "protocol", "ai", "model", "context"]
categories = [
    "api-bindings",
    "development-tools",
    "network-programming",
    "asynchronous",
]
documentation = "https://docs.rs/mcprotocol-rs"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0.12"
futures = "0.3"
tracing = "0.1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["codec"] }
